# video-pipeline

./: .gitignore  libinstaller.bat  memory.md  pyinstaller.bat  pyproject.toml  vbse_video_pipeline.md
.claude/: settings.local.json
docs/: vbee_api_collection.json  video_pipeline.md
docs/superpowers/plans/: 2026-05-11-vbee-tts-integration.md
lib/: __init__.py  audio.py  cache.py  data_card.py  render.py  schema.py  validator.py  vbee.py
notebooks/: _template_bulletin.ipynb  _template_editorial_mystery.ipynb  _template_news_analysis.ipynb
outputs/2026-05-12_W19_banking/: data_card.md  manifest.json  script_final.json
outputs/2026-05-12_daily_eod/: data_card.md  manifest.json  script_final.json
prompts/bulletin/: schema.ts  style_guide.md
prompts/editorial_mystery/: style_guide.md
prompts/news_analysis/: style_guide.md
remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/public/runs/2026-05-12_W19_banking/: script.json
remotion/public/runs/2026-05-12_daily_eod/: script.json
remotion/src/: Root.tsx
remotion/src/shared/primitives/: BackgroundLayer.tsx  SafeFrame.tsx  SafeZone.tsx
remotion/src/shared/theme/: themes.ts  tokens.ts
remotion/src/templates/bulletin/: Composition.tsx  SceneDispatcher.tsx  schema.ts
remotion/src/templates/bulletin/scenes/: HeadlineScene.tsx  IntroScene.tsx  KPIScene.tsx  MetricScene.tsx  OutroScene.tsx  QuickRankScene.tsx  (+1 more)
scripts/: poc_vbee.py  sync_schema.py
tests/: conftest.py  test_audio.py  test_cache.py  test_render.py  test_schema.py  test_validator.py  test_vbee.py
(+1 files in other folders)
