[project]
name = "vbse-video"
version = "0.0.1"
description = "VBSE Video Pipeline v2 - notebook-centric orchestration. See docs/video_pipeline.md."
requires-python = ">=3.11"
dependencies = [
    # TODO Phase 1: pin versions when integrating
    "pydantic>=2",
    "requests",
    "python-dotenv",
    "pyperclip",
    "pydub",
    "mutagen",
    "imageio-ffmpeg",
    "pydantic-to-typescript",
    "jupyterlab",
    "ipython",
    "pytest",
    "requests-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits real Vbee API (costs credits, skip by default)",
]
addopts = "-m 'not live'"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
